<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FWPoly4" Id="{3e3f4c86-5b25-4662-8f1c-327ba47cf8f5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM FWPoly4
VAR
	a: LREAL;
	b: LREAL;
	c: LREAL;
	tempo_2: LREAL;
	tempo_3: LREAL;
	tempo_4: LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (TRAJ.tempo = 0) THEN
	TRAJ.v_max_rpm_low	:= (UDINT_TO_LREAL(TRAJ.speed_selector_rpm) / MOTOR.GEAR_RATIO);
	TRAJ.periodo_ms 	:= (ABS(TRAJ.position_selector_deg) * 15 * 1000) / (8 * TRAJ.v_max_rpm_low * 6) ; // millisecondi	
	TRAJ.delta_t 		:= 1 / (TRAJ.periodo_ms); 
	TRAJ.status			:= TRUE;
	
	a := 16 * TRAJ.v_max_rpm_low * 1000;
	b := -32 * TRAJ.v_max_rpm_low * 1000;
	c := 16 * TRAJ.v_max_rpm_low * 1000;

END_IF

IF (TRAJ.status = TRUE) THEN
	tempo_2 := TRAJ.tempo * TRAJ.tempo;
	tempo_3 := tempo_2 * TRAJ.tempo;
	tempo_4 := tempo_3 * TRAJ.tempo;
	TRAJ.target_vel_mrpm := LREAL_TO_DINT(a * tempo_4 + b * tempo_3 + c * tempo_2);
ELSE
	TRAJ.error := PLC_ERROR.TRAJ_NO_SETUP;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="FWPoly4">
      <LineId Id="58" Count="19" />
      <LineId Id="45" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>